tests/invalid/type/string_index_write.pts
function main() : void {
    string s = "abc";
    s[0] = s[1];
}
